# MastersTeamProject

./: .gitignore  CMakeCache - Copy.txt  CMakeLists.txt  CMakeSettings.json  GeneratePS5CMAKE.bat  README.md  cmake_install(PS5).cmake
AdvancedGameTechnologies/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  CSC8503.sln  README.md  README.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install(PC).cmake  cmake_install.cmake
AdvancedGameTechnologies/Assets/Shaders/: PerPixelShadowFragment.frag  PostProcess.frag  PostProcess.vert  SkinningShadow.vert  SkinningVertex.vert  character.frag  character.vert  skinnedShadow.vert  terrain.frag
AdvancedGameTechnologies/Assets/Shaders/PSSL/: DebugLine_p.ags  DebugLine_vv.ags  DebugText_p.ags  PixelShader_p.ags  Skybox_vv.ags  VertexShader_vv.ags
AdvancedGameTechnologies/Assets/Sounds/: Background Sound.bank  Enemy AI.bank  Environmental Effect.bank  Game Menu.bank  Master.bank  Master.strings.bank  Player.bank  Weapon.bank
AdvancedGameTechnologies/Assets/Textures/: Thumbs.db  ak47.png.gnf  bg.png.gnf  burst.png.gnf  shotgun.png.gnf
AdvancedGameTechnologies/CSC8503/: AdvanceMeshMaterial.cpp  AdvanceMeshMaterial.h  AdvanceRenderObject.cpp  AdvanceRenderObject.h  Animator.cpp  Animator.h  AssetManager.cpp  AssetManager.h  AudioManager.cpp  AudioManager.h  AutoTurret.cpp  AutoTurret.h  Bullet.cpp  Bullet.h  CMakeLists.txt  CSC8503.vcxproj  CSC8503.vcxproj.filters  CatCoin.cpp  CatCoin.h  DemoShootableEnemy.cpp  DemoShootableEnemy.h  Door.cpp  Door.h  Enemy.cpp  Enemy.h  Enums.cpp  Enums.h  GameNet.cpp  GameNet.h  GameTechAGCRenderer.cpp  GameTechAGCRenderer.h  GameTechRenderer.cpp  GameTechRenderer.h  GameUI.cpp  GameUI.h  GhostEnemy.cpp  GhostEnemy.h  HeightMap.cpp  HeightMap.h  Inventory.cpp  (+46 more)
AdvancedGameTechnologies/CSC8503/Assets/Shaders/: terrain.vert
AdvancedGameTechnologies/CSC8503/Assets/Shaders/PSSL/: DebugText_vv.ags  Shadow_p.ags  TechVertex_vv.ags  Tech_p.ags  gamma_c.ags
AdvancedGameTechnologies/CSC8503/Assets/Sounds/: Background Sound.bank  Environmental Effect.bank  Game Menu.bank  Master.bank  Player.bank  Weapon.bank
AdvancedGameTechnologies/CSC8503/Assets/Textures/: wood.png.gnf
AdvancedGameTechnologies/CSC8503CoreClasses/: CMakeLists.txt  CSC8503CoreClasses.vcxproj  CSC8503CoreClasses.vcxproj.filters  CollisionDetection.cpp  CollisionDetection.h  GameClient.cpp  GameClient.h  GameObject.cpp  GameObject.h  GameServer.cpp  GameServer.h  GameWorld.cpp  GameWorld.h  NetworkBase.cpp  NetworkBase.h  PhysicsObject.h  PhysicsSystem.cpp  PhysicsSystem.h  PositionConstraint.cpp  RenderObject.cpp  RenderObject.h  cmake_install.cmake
AdvancedGameTechnologies/CSC8503CoreClasses/ImGui/: imgui_impl_opengl3.cpp  imgui_impl_win32.cpp
AdvancedGameTechnologies/CSC8503CoreClasses/enet/: enet.h  unix.h  win32.h
AdvancedGameTechnologies/Document/: Readme.docx
AdvancedGameTechnologies/GLTFLoader/: GLTFLoader.cpp  GLTFLoader.h
AdvancedGameTechnologies/NCLCoreClasses/: Camera.cpp  Camera.h  GameTimer.h  KeyboardMouseController.h  Mesh.cpp  Mesh.h  MeshMaterial.cpp  MeshMaterial.h  MshLoader.cpp  MshLoader.h  TextureLoader.cpp  Vector.h  Win32Window.cpp  Win32Window.h  Window.h
AdvancedGameTechnologies/OpenGLRendering/: CMakeLists.txt  OGLMesh.cpp  OGLMesh.h  OGLRenderer.h  OGLShader.cpp  OGLTexture.cpp  OGLTexture.h  OpenGLRendering.vcxproj  OpenGLRendering.vcxproj.filters  cmake_install.cmake
AdvancedGameTechnologies/OpenGLRendering/glad/: gl.c
AdvancedGameTechnologies/PS5Core/: AGCBuffer.cpp  AGCBuffer.h  AGCMesh.cpp  AGCMesh.h  AGCRenderer.h  AGCShader.h  AGCTexture.cpp  PS5Controller.cpp  PS5MemoryAllocator.cpp  PS5Starter - Shortcut.lnk  PS5Window.cpp  cmake_install.cmake
AdvancedGameTechnologies/SDK/FMOD Studio API Windows/doc/FMOD API User Manual/images/: Thumbs.db
AdvancedGameTechnologies/ahk/: networking.ahk
Assets/Meshes/: Male_Guard.mat
Assets/Shaders/PSSL/: Skybox_p.ags  skinning_c.ags
Assets/Textures/: MB_BodyNone_Guard_Albedo.png.gnf  Metal.png.gnf  Metal053B_1K-PNG_Color.png.gnf  Tiles.png.gnf
CSC8503/: Animator.h  AudioManager.cpp  AudioManager.h  Bullet.h  CMakeLists.txt  CatCoin.cpp  Door.cpp  Enemy.h  Enums.h  GameNet.cpp  GameNet.h  GameTechAGCRenderer.cpp  GameTechAGCRenderer.h  GameTechRenderer.cpp  GameTechRenderer.h  GameTechRendererInterface.h  GameUI.cpp  GameUI.h  GhostEnemy.h  Inventory.h  InventoryUI.cpp  Item.cpp  Item.h  Main.cpp  MeleeEnemy.cpp  MeleeEnemy.h  NavMeshAgent.h  NavMeshNode.h  PassiveItem.cpp  PassiveItem.h  Pistol.cpp  Pistol.h  Player.cpp  Player.h  Rope.cpp  SceneManager.h  ThirdPersonCamera.h  TutorialGame.cpp  TutorialGame.h  UIStateManager.cpp  (+1 more)
CSC8503/Assets/Sounds/: Background Sound.bank  Enemy AI.bank  (+3 more)
CSC8503CoreClasses/: CMakeLists.txt  CollisionDetection.h  Color.h  Constants.cpp  Constants.h  Event.h  GameClient.cpp  GameObject.cpp  GameObject.h  GameWorld.cpp  GameWorld.h  NetworkBase.h  PhysicsSystem.cpp  QuadTree.cpp  QuadTree.h  RenderObject.h
CSC8503CoreClasses/ImGui/: imgui_impl_opengl3_loader.h
CSC8503CoreClasses/enet/: win32.h
NCLCoreClasses/: GameTimer.h  KeyboardMouseController.h  MeshAnimation.cpp  MeshAnimation.h  MshLoader.cpp  Win32Window.cpp
OpenGLRendering/: CMakeLists.txt  OGLRenderer.cpp  OGLShader.cpp
PS5Core/: AGCRenderer.cpp  AGCShader.cpp  AGCTexture.h  PS5Controller.h  PS5MemoryAllocator.h  PS5Window.h
ahk/: imgui.ini  networking.ahk  test.ahk
(+4 files in other folders)
